[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/Turn.gd" type="Script" id=3]
[ext_resource path="res://scenes/Score.gd" type="Script" id=4]
[ext_resource path="res://scenes/game.gd" type="Script" id=5]
[ext_resource path="res://assets/sprites/objects/book-shelf.png" type="Texture" id=7]
[ext_resource path="res://assets/fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://icon.png" type="Texture" id=10]
[ext_resource path="res://assets/sounds/main-menu-bg.mp3" type="AudioStream" id=11]
[ext_resource path="res://assets/sprites/objects/chalk-board.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 26
outline_size = 8
outline_color = Color( 0.0941176, 0.0784314, 0.145098, 1 )
use_mipmaps = true
extra_spacing_top = 16
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 6
outline_color = Color( 0.0941176, 0.0784314, 0.145098, 1 )
use_mipmaps = true
extra_spacing_top = 8
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
size = 28
outline_size = 3
outline_color = Color( 0.14902, 0.168627, 0.266667, 1 )
use_mipmaps = true
extra_spacing_top = 8
font_data = ExtResource( 9 )

[node name="Game" type="ViewportContainer"]
script = ExtResource( 5 )

[node name="Background" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.14902, 0.168627, 0.266667, 1 )

[node name="ColorRect2" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -395.0
color = Color( 0.752941, 0.796078, 0.862745, 1 )

[node name="BookShelf" type="TextureRect" parent="Background"]
margin_left = 828.0
margin_top = 66.0
margin_right = 892.0
margin_bottom = 130.0
rect_scale = Vector2( 3, 5 )
texture = ExtResource( 7 )

[node name="BookShelf2" type="TextureRect" parent="Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -256.0
margin_right = -128.0
margin_bottom = 64.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 12 )

[node name="Game" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="HUD" type="CanvasLayer" parent="."]
layer = 3

[node name="ColorRect2" type="ColorRect" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -679.0
color = Color( 0.0941176, 0.0784314, 0.145098, 0.752941 )

[node name="AdversaryName" type="RichTextLabel" parent="HUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -195.0
margin_top = 12.0
margin_right = 193.0
margin_bottom = 64.0
grow_horizontal = 2
size_flags_vertical = 0
bbcode_enabled = true
bbcode_text = "[center]Adversário
Zé Memorinha[/center]"
text = "Adversário
Zé Memorinha"
scroll_active = false

[node name="Turn" type="RichTextLabel" parent="HUD"]
margin_left = 8.0
margin_top = 12.0
margin_right = 264.0
margin_bottom = 70.0
bbcode_enabled = true
bbcode_text = "[center]Turno
 Adversário[/center]"
text = "Turno
 Adversário"
script = ExtResource( 3 )

[node name="Score" type="RichTextLabel" parent="HUD"]
margin_left = 768.0
margin_top = 6.0
margin_right = 1017.0
margin_bottom = 165.0
bbcode_enabled = true
bbcode_text = "[center]Pontuação[/center]"
text = "Pontuação"
script = ExtResource( 4 )

[node name="AdversaryScore" type="RichTextLabel" parent="HUD/Score"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 27.0
bbcode_enabled = true
bbcode_text = "[center]Adversário: 0[/center]"
text = "Adversário: 0"

[node name="PlayerScore" type="RichTextLabel" parent="HUD/Score"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 52.0
bbcode_enabled = true
bbcode_text = "[center]Jogador: 0[/center]"
text = "Jogador: 0"

[node name="MainMenu" type="CanvasLayer" parent="."]
layer = 4

[node name="MainMenuSound" type="AudioStreamPlayer" parent="MainMenu"]
stream = ExtResource( 11 )
volume_db = -20.0
autoplay = true

[node name="ColorRect" type="ColorRect" parent="MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.247059, 0.156863, 0.196078, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -129.0
margin_right = 512.0
margin_bottom = 129.0

[node name="Name" type="RichTextLabel" parent="MainMenu/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 125.0
size_flags_vertical = 3
custom_colors/default_color = Color( 0.909804, 0.717647, 0.588235, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Memória de Raposa[/center]"
text = "Memória de Raposa"

[node name="TextureRect" type="TextureRect" parent="MainMenu/VBoxContainer/Name"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = 9.0
margin_right = 32.0
margin_bottom = 73.0
texture = ExtResource( 10 )

[node name="Button" type="Button" parent="MainMenu/VBoxContainer"]
margin_left = 428.0
margin_top = 179.0
margin_right = 596.0
margin_bottom = 211.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = SubResource( 2 )
text = "Iniciar"

[node name="History" type="CanvasLayer" parent="."]
layer = 4
visible = false

[node name="ColorRect" type="ColorRect" parent="History"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.227451, 0.266667, 0.4, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="History"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -235.5
margin_right = 512.0
margin_bottom = 235.5

[node name="RichTextLabel" type="RichTextLabel" parent="History/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 356.0
size_flags_horizontal = 7
size_flags_vertical = 7
bbcode_enabled = true
bbcode_text = "[center]Bem vindo a escola Memória de Raposa novato[/center]



[center]Aqui nós valorizamos muito a capacidade de memorização e esperteza dos alunos, e temos inclusive uma classificação dos com a memória mais desenvolvida![/center]

[center]Eu sou Zé Memorinha fiquei sabendo que você é especial e foi recomendado para entrar na nossa escola, sendo assim eu o terceiro da classificação vou te dar a chance de um avanço rápido na nossa hierarquia, me vença e obtenha o meu lugar na classificação se tornando-se o primeiro![/center]"
text = "Bem vindo a escola Memória de Raposa novato



Aqui nós valorizamos muito a capacidade de memorização e esperteza dos alunos, e temos inclusive uma classificação dos com a memória mais desenvolvida!

Eu sou Zé Memorinha fiquei sabendo que você é especial e foi recomendado para entrar na nossa escola, sendo assim eu o terceiro da classificação vou te dar a chance de um avanço rápido na nossa hierarquia, me vença e obtenha o meu lugar na classificação se tornando-se o primeiro!"

[node name="Button2" type="Button" parent="History/VBoxContainer"]
margin_left = 332.0
margin_top = 401.0
margin_right = 692.0
margin_bottom = 433.0
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 0.3
custom_fonts/font = SubResource( 2 )
text = "Iniciar Desafio"

[node name="GameResult" type="CanvasLayer" parent="."]
layer = 4
visible = false

[node name="ColorRect" type="ColorRect" parent="GameResult"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.227451, 0.266667, 0.4, 1 )

[node name="Result" type="RichTextLabel" parent="GameResult"]
margin_top = 296.0
margin_right = 1024.0
margin_bottom = 417.0
rect_min_size = Vector2( 128, 32 )
size_flags_horizontal = 7
size_flags_vertical = 5
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Parabéns, você realmente é impressionante, merecidamente alcançou o primeiro lugar![/center]"
text = "Parabéns, você realmente é impressionante, merecidamente alcançou o primeiro lugar!"

[connection signal="pressed" from="MainMenu/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="History/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
